<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/window"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <include android:id="@+id/header" layout="@layout/header" />
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:paddingLeft="20dp"
    	android:paddingRight="20dp"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="10dp">
    	<LinearLayout
    		android:id="@+id/landing_content"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:orientation="vertical"
    		android:clickable="true">
	    	<TextView 
				android:id="@+id/landing_welcome_header"
			    android:text="@string/landing_welcome_header"
			    style="@style/h2"
			/>
			<TextView 
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/landing_welcome_text"
			/>
			<TextView 
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/hide_welcome_text"
			    android:textSize="12sp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="15dp"
			/>
		</LinearLayout>
		<Button
			android:id="@+id/add"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/add_new_reminder"
		    android:layout_marginBottom="15dp"
		    android:drawableLeft="@drawable/icon_large_clock"
		    android:drawablePadding="10dp"
		    android:gravity="center"
		    android:padding="20dp"
		    android:layout_gravity="center_horizontal"
		/>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageView
				android:id="@+id/icon_clock"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/icon_clock"
				android:layout_marginTop="2dp"
				android:layout_marginRight="5dp"
		    />
			<TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/currentfolks"
			    android:layout_toRightOf="@id/icon_clock"
			/>
			<TextView 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/tap_to_edit"
			    android:layout_alignParentRight="true"
			    android:textSize="12sp"
			/>
		</RelativeLayout>
		<ImageView
	    	style="@style/hr"
	    	android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
	    />
		<ListView
			android:id="@android:id/list"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:cacheColorHint="#00000000"
			android:background="@android:color/transparent"
		/>
			
	</LinearLayout>
	
</LinearLayout>